[#175908973] Fix typo + comment
